集成jpush 大致完成我的下载功能 框架更新/优化

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,9 @@
         <item name="android:windowBackground">@color/app_background</item>
     </style>
 
+
+    <style name="FullscreenTheme" parent="AppTheme">
+        <item name="android:windowFullscreen">?android:windowNoTitle</item>
+    </style>
+
 </resources>
