解决OOM，优化内存占用，完成我的下载模块基本功能，引入6.0权限处理（申请sd卡读写权限）

--- a/app/src/main/res/layout/activity_my_download.xml
+++ b/app/src/main/res/layout/activity_my_download.xml
@@ -17,6 +17,7 @@
         android:id="@+id/img_gv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="3" />
+        android:numColumns="3"
+        tools:listitem="@layout/item_img_gv_layout"/>
 
 </LinearLayout>
