--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.yun.opern.ui.LauncherActivity">
+    tools:context="com.yun.opern.ui.activitys.LauncherActivity">
 
     <ImageView
         android:layout_weight="1"
