--- a/app/src/main/res/layout/activity_show_image.xml
+++ b/app/src/main/res/layout/activity_show_image.xml
@@ -11,22 +11,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/download_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:id="@+id/fab_btns"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="80dp"
-        android:src="@mipmap/ic_download" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/collection_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginBottom="20dp"
+        android:paddingBottom="20dp"
         android:layout_marginEnd="20dp"
-        android:src="@mipmap/ic_collection" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/download_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:src="@mipmap/ic_download" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/collection_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_collection" />
+    </LinearLayout>
+
+    <com.yun.opern.views.ActionBarNormal
+        android:id="@+id/actionbar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:title="this is title"/>
 
 </FrameLayout>
