--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -160,7 +160,7 @@
                 android:layout_height="30dp"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="15dp"
-                android:src="@mipmap/ic_download_blue" />
+                android:src="@mipmap/ic_cache" />
 
             <TextView
                 android:id="@+id/app_cache_size_tv"
@@ -192,9 +192,11 @@
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_centerVertical="true"
                 android:layout_marginLeft="15dp"
-                android:src="@mipmap/ic_collection_blue" />
+                android:src="@mipmap/ic_push"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="16dp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -207,6 +209,7 @@
 
 
             <Switch
+                android:id="@+id/push_switch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
