--- a/app/src/main/res/layout/item_opern_list.xml
+++ b/app/src/main/res/layout/item_opern_list.xml
@@ -7,7 +7,10 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardUseCompatPadding="true"
+        android:layout_marginTop="2.5dp"
+        android:layout_marginBottom="2.5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
         app:contentPadding="10dp"
         app:cardCornerRadius="8dp">
 
