--- a/app/src/main/res/layout/layout_actionbar_normal.xml
+++ b/app/src/main/res/layout/layout_actionbar_normal.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?android:actionBarSize"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="?android:colorPrimary">
 
     <ImageView
@@ -13,14 +14,16 @@
         android:layout_height="50dp"
         android:src="@mipmap/ic_back"/>
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/layout_actionbar_normal_more_img"
         android:layout_alignParentRight="true"
-        android:padding="12dp"
+        android:padding="10dp"
         android:layout_centerVertical="true"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@mipmap/ic_more"/>
+        android:src="@mipmap/ic_more"
+        app:civ_border_color="@color/white"
+        app:civ_border_width="0dp"/>
 
 
     <TextView
