--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -14,24 +14,24 @@
         app:title="@string/app_name"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="@dimen/x300"
+        android:layout_height="@dimen/x300"
+        android:layout_marginTop="@dimen/x30"
         android:layout_gravity="center"
         android:src="@mipmap/sccnnom_v20161110171_354"
-        app:civ_border_width="2dp"
+        app:civ_border_width="@dimen/x6"
         app:civ_border_color="@color/white"/>
 
     <android.support.v7.widget.CardView
         android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="2.5dp"
-        app:contentPadding="10dp"
-        app:cardCornerRadius="8dp">
+        android:layout_height="0dp"
+        android:layout_marginLeft="@dimen/x15"
+        android:layout_marginRight="@dimen/x15"
+        android:layout_marginTop="@dimen/x30"
+        android:layout_marginBottom="@dimen/x7"
+        app:contentPadding="@dimen/x30"
+        app:cardCornerRadius="@dimen/x24">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -48,10 +48,10 @@
 
     <Button
         android:background="@drawable/selector_update_btn"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="2.5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="@dimen/x15"
+        android:layout_marginRight="@dimen/x15"
+        android:layout_marginTop="@dimen/x7"
+        android:layout_marginBottom="@dimen/x7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="检查更新"
