--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -14,17 +14,18 @@
         android:scaleType="centerCrop"
         android:src="@mipmap/sccnnom_v20161110171_354"/>
 
-    <RelativeLayout
+    <LinearLayout
         android:background="@color/white"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="5">
+        android:orientation="horizontal"
+        android:layout_weight="6">
 
         <ImageView
             android:id="@+id/laucner_img"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="@dimen/x200"
+            android:layout_height="@dimen/x200"
             android:src="@mipmap/ic_laucner_ion" />
 
         <TextView
@@ -32,10 +33,8 @@
             android:layout_height="wrap_content"
             android:text="@string/app_name"
             android:textSize="18sp"
-            android:textColor="@color/black"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/laucner_img" />
-    </RelativeLayout>
+            android:textColor="@color/black" />
+    </LinearLayout>
 
 
 </LinearLayout>
