--- a/app/src/main/res/layout/activity_show_image.xml
+++ b/app/src/main/res/layout/activity_show_image.xml
@@ -14,8 +14,8 @@
     <LinearLayout
         android:id="@+id/fab_btns"
         android:layout_gravity="bottom|end"
-        android:paddingBottom="20dp"
-        android:layout_marginEnd="20dp"
+        android:paddingBottom="@dimen/x60"
+        android:layout_marginEnd="@dimen/x60"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -24,7 +24,7 @@
             android:id="@+id/download_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="@dimen/x30"
             android:src="@mipmap/ic_download" />
 
         <android.support.design.widget.FloatingActionButton
