--- a/app/src/main/res/layout/activity_tell_us.xml
+++ b/app/src/main/res/layout/activity_tell_us.xml
@@ -28,8 +28,8 @@
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_feedback_fab"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="@dimen/x60"
+        android:layout_marginEnd="@dimen/x60"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_write" />
