--- a/app/src/main/res/layout/fragment_show_image.xml
+++ b/app/src/main/res/layout/fragment_show_image.xml
@@ -13,7 +13,7 @@
     <ProgressBar
         android:id="@+id/loading_pb"
         android:layout_gravity="center"
-        android:layout_width="60dp"
-        android:layout_height="60dp" />
+        android:layout_width="@dimen/x150"
+        android:layout_height="@dimen/x150" />
 
 </FrameLayout>
