--- a/app/src/main/res/layout/item_img_gv_layout.xml
+++ b/app/src/main/res/layout/item_img_gv_layout.xml
@@ -19,10 +19,10 @@
 
     <ImageView
         android:id="@+id/item_img_gv_delete_img"
-        android:layout_margin="5dp"
-        android:layout_gravity="right"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_margin="@dimen/x15"
+        android:layout_gravity="end"
+        android:layout_width="@dimen/x70"
+        android:layout_height="@dimen/x70"
         android:src="@mipmap/ic_delete"/>
 
 </FrameLayout>
