--- a/app/src/main/res/layout/layout_actionbar_normal.xml
+++ b/app/src/main/res/layout/layout_actionbar_normal.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="?android:actionBarSize"
+    android:layout_height="@dimen/x140"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="?android:colorPrimary">
+    android:background="@color/light_blue">
 
     <ImageView
         android:id="@+id/layout_actionbar_normal_back_img"
-        android:layout_alignParentLeft="true"
-        android:padding="12dp"
+        android:layout_alignParentStart="true"
+        android:padding="@dimen/x36"
         android:layout_centerVertical="true"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="@dimen/x150"
+        android:layout_height="@dimen/x150"
         android:src="@mipmap/ic_back"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/layout_actionbar_normal_more_img"
-        android:layout_alignParentRight="true"
-        android:padding="10dp"
+        android:layout_alignParentEnd="true"
+        android:padding="@dimen/x30"
         android:layout_centerVertical="true"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="@dimen/x150"
+        android:layout_height="@dimen/x150"
         android:src="@mipmap/ic_more"
         app:civ_border_color="@color/white"
         app:civ_border_width="0dp"/>
@@ -30,8 +30,8 @@
         android:gravity="center"
         android:id="@+id/layout_actionbar_normal_title_tv"
         android:layout_centerInParent="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginStart="@dimen/x150"
+        android:layout_marginEnd="@dimen/x150"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="this is actionbar"
