--- a/app/src/main/res/layout/layout_input_dialog.xml
+++ b/app/src/main/res/layout/layout_input_dialog.xml
@@ -6,9 +6,9 @@
 
     <EditText
         android:id="@+id/layout_input_dialog_edt"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginTop="@dimen/x30"
+        android:layout_marginStart="@dimen/x30"
+        android:layout_marginEnd="@dimen/x30"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/selector_input_feedback_edt" />
