UI EmptyView 优化

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,18 +17,28 @@
             android:layout_height="wrap_content"
             app:title="@string/app_name"/>
 
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/opern_srl"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/opern_lv"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:listitem="@layout/item_opern_list" />
+            <include
+                layout="@layout/layout_empty"
+                android:id="@+id/empty_view"
+                android:visibility="gone" />
 
-        </android.support.v4.widget.SwipeRefreshLayout>
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/opern_srl"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/opern_lv"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    tools:listitem="@layout/item_opern_list" />
+
+            </android.support.v4.widget.SwipeRefreshLayout>
+        </FrameLayout>
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
