--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -47,6 +47,7 @@
     </android.support.v7.widget.CardView>
 
     <Button
+        android:id="@+id/check_update_btn"
         android:background="@drawable/selector_update_btn"
         android:layout_marginLeft="@dimen/x15"
         android:layout_marginRight="@dimen/x15"
