--- a/app/src/main/res/layout/activity_show_image.xml
+++ b/app/src/main/res/layout/activity_show_image.xml
@@ -37,7 +37,7 @@
     <com.yun.opern.views.ActionBarNormal
         android:id="@+id/actionbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:title="this is title"/>
 
 </FrameLayout>
