--- a/app/src/main/res/layout/activity_more.xml
+++ b/app/src/main/res/layout/activity_more.xml
@@ -48,7 +48,7 @@
                 android:layout_marginTop="@dimen/x12"
                 android:layout_toEndOf="@id/user_head_img"
                 android:text="微博登录"
-                android:textColor="#666666"
+                android:textColor="@color/black"
                 android:textSize="16sp" />
 
             <TextView
@@ -180,9 +180,7 @@
                     android:text="APP缓存:"
                     android:textSize="14sp" />
 
-
             </RelativeLayout>
-
 
             <View
                 android:layout_width="match_parent"
@@ -195,7 +193,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/selector_nor_white_bg">
-
 
                 <ImageView
                     android:layout_width="@dimen/x90"
@@ -214,7 +211,6 @@
                     android:text="推送"
                     android:textSize="14sp" />
 
-
                 <Switch
                     android:id="@+id/push_switch"
                     android:layout_width="wrap_content"
@@ -222,8 +218,8 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="@dimen/x45" />
-
             </RelativeLayout>
+
         </LinearLayout>
 
         <LinearLayout
@@ -279,7 +275,6 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/selector_nor_white_bg">
 
-
                 <ImageView
                     android:layout_width="@dimen/x90"
                     android:layout_height="@dimen/x90"
@@ -288,7 +283,8 @@
                     android:src="@mipmap/ic_about_us" />
 
                 <TextView
-                    android:layout_width="match_parent"
+                    android:id="@+id/about_us_tv"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/x170"
                     android:paddingBottom="@dimen/x45"
@@ -296,6 +292,13 @@
                     android:text="关于我们"
                     android:textSize="14sp" />
 
+                <com.yun.opern.views.SmallRedPoint
+                    android:id="@+id/small_red_point"
+                    android:layout_centerVertical="true"
+                    android:layout_width="@dimen/x25"
+                    android:layout_height="@dimen/x25"
+                    android:layout_toEndOf="@+id/about_us_tv"
+                    android:layout_marginStart="@dimen/x20" />
 
                 <ImageView
                     android:layout_width="@dimen/x50"
@@ -307,6 +310,7 @@
             </RelativeLayout>
 
         </LinearLayout>
+
     </LinearLayout>
 
     <Button
@@ -318,6 +322,5 @@
         android:layout_alignParentBottom="true"
         android:text="@string/logout"
         android:textColor="@color/white" />
-
 
 </RelativeLayout>
