--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -8,4 +8,7 @@
     <external-path
         name="beta_external_files_path"
         path="Android/data/" />
+    <external-path
+        name="all"
+        path="." />
 </paths>
