--- a/app/src/main/res/layout/item_opern_list.xml
+++ b/app/src/main/res/layout/item_opern_list.xml
@@ -56,13 +56,26 @@
                 android:textSize="14sp" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/item_opern_list_data_origin_tv"
+        <LinearLayout
+            android:gravity="end"
             android:layout_gravity="bottom|end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="dataOrigin 平凡之路"
-            android:textSize="14sp" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/item_opern_list_data_category_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="category" />
+
+            <TextView
+                android:id="@+id/item_opern_list_data_origin_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="dataOrigin 平凡之路"
+                android:textSize="14sp" />
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
