--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -1,73 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:scrollbars="none"
     tools:context="com.yun.opern.ui.activitys.AboutUsActivity">
 
-    <com.yun.opern.views.ActionBarNormal
-        android:id="@+id/actionbar"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:title="@string/app_name"/>
+        android:orientation="vertical">
 
-    <LinearLayout
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/x300"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/laucner_img"
-            android:layout_width="@dimen/x200"
-            android:layout_height="@dimen/x200"
-            android:src="@mipmap/ic_laucner_ion" />
-
-        <TextView
-            android:layout_width="wrap_content"
+        <com.yun.opern.views.ActionBarNormal
+            android:id="@+id/actionbar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="搜谱——简简单单搜曲谱"
-            android:textSize="18sp"
-            android:textColor="@color/black" />
+            app:title="@string/app_name" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/x300"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/laucner_img"
+                android:layout_width="@dimen/x200"
+                android:layout_height="@dimen/x200"
+                android:src="@mipmap/ic_laucner_ion" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="搜谱——简简单单搜曲谱"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/x7"
+            android:layout_marginLeft="@dimen/x15"
+            android:layout_marginRight="@dimen/x15"
+            app:cardCornerRadius="@dimen/x24"
+            app:contentPadding="@dimen/x30">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingBottom="@dimen/x10"
+                android:paddingTop="@dimen/x10">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="关于搜谱APP"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/x15"
+                    android:text="搜谱APP提供简单方便的在线曲谱搜索功能，以及下载、搜藏等功能"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/x7"
+            android:layout_marginLeft="@dimen/x15"
+            android:layout_marginRight="@dimen/x15"
+            android:layout_marginTop="@dimen/x20"
+            app:cardCornerRadius="@dimen/x24"
+            app:contentPadding="@dimen/x30">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingBottom="@dimen/x10"
+                android:paddingTop="@dimen/x10">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="关于曲谱版权"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/x15"
+                    android:text="搜谱APP所提供的所有曲谱图片等等信息，全部来自网络，如果涉及版权问题，请联系我们"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/x7"
+            android:layout_marginLeft="@dimen/x15"
+            android:layout_marginRight="@dimen/x15"
+            android:layout_marginTop="@dimen/x20"
+            app:cardCornerRadius="@dimen/x24"
+            app:contentPadding="@dimen/x30">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingBottom="@dimen/x10"
+                android:paddingTop="@dimen/x10">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="一些额外信息"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/x15"
+                    android:text="搜谱项目的在于提供良好的曲谱搜索服务，适配Android手机，以及Android平板，对于iOS设备的支持，会在系统趋于稳定的时候提上日程\n
+搜谱项目实际开发、维护、运营团队只有一个人，难免存在不足，望谅解"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <Button
+            android:id="@+id/check_update_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/x7"
+            android:layout_marginLeft="@dimen/x15"
+            android:layout_marginRight="@dimen/x15"
+            android:layout_marginTop="@dimen/x20"
+            android:background="@drawable/selector_update_btn"
+            android:text="检查更新"
+            android:textColor="@color/white" />
     </LinearLayout>
 
-    <android.support.v7.widget.CardView
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginLeft="@dimen/x15"
-        android:layout_marginRight="@dimen/x15"
-        android:layout_marginBottom="@dimen/x7"
-        app:contentPadding="@dimen/x30"
-        app:cardCornerRadius="@dimen/x24">
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/aoubt_us"
-                android:textColor="@color/black"
-                android:textSize="16sp"/>
-        </ScrollView>
-
-    </android.support.v7.widget.CardView>
-
-    <Button
-        android:id="@+id/check_update_btn"
-        android:background="@drawable/selector_update_btn"
-        android:layout_marginLeft="@dimen/x15"
-        android:layout_marginRight="@dimen/x15"
-        android:layout_marginTop="@dimen/x7"
-        android:layout_marginBottom="@dimen/x7"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="检查更新"
-        android:textColor="@color/white"/>
-
-
-</LinearLayout>
+</ScrollView>
