修复viewpage bug， 修复首页启动权限检测bug，增加【开发者消息】功能，搜索页面软键盘适配，搜索按钮简化，修复Android 4.4闪退问题 发布1.0.3

--- a/app/src/main/res/drawable/selector_cir_right_img_bg.xml
+++ b/app/src/main/res/drawable/selector_cir_right_img_bg.xml
@@ -6,13 +6,13 @@
     <item android:state_pressed="true">
         <shape>
             <corners android:topRightRadius="5dp" android:topLeftRadius="0dp" android:bottomRightRadius="5dp" android:bottomLeftRadius="0dp"/>
-            <solid android:color="?android:colorPrimary"/>
+            <solid android:color="@color/light_blue" />
         </shape>
     </item>
     <item>
         <shape>
             <corners android:topRightRadius="5dp" android:topLeftRadius="0dp" android:bottomRightRadius="5dp" android:bottomLeftRadius="0dp"/>
-            <solid android:color="?android:colorPrimary"/>
+            <solid android:color="@color/light_blue" />
         </shape>
     </item>
 
