--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,43 +7,61 @@
     android:orientation="vertical"
     tools:context="com.yun.opern.ui.activitys.SearchActivity">
 
-    <com.yun.opern.views.ActionBarNormal
-        android:id="@+id/actionbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:title="搜索" />
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="@dimen/x150"
+        android:layout_height="@dimen/x150"
+        android:visibility="gone"
+        android:layout_gravity="center" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="@dimen/x30">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/search_input_edt"
-            android:layout_width="0dp"
+        <com.yun.opern.views.ActionBarNormal
+            android:id="@+id/actionbar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="6"
-            android:background="@drawable/selector_cir_left_edittext_bg"
-            android:hint="曲谱名/作词/作曲/演唱者"
-            android:singleLine="true"
-            android:textSize="17sp" />
+            app:title="搜索" />
 
-        <com.yun.opern.views.SearchView
-            android:id="@+id/search_btn"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="@dimen/x30">
+
+            <EditText
+                android:id="@+id/search_input_edt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="6"
+                android:background="@drawable/selector_cir_left_edittext_bg"
+                android:hint="曲谱名/作词/作曲/演唱者"
+                android:singleLine="true"
+                android:textSize="17sp"
+                android:imeOptions="actionSearch" />
+
+            <ImageView
+                android:id="@+id/search_btn"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/selector_cir_right_img_bg"
+                android:padding="@dimen/x20"
+                android:src="@mipmap/ic_search" />
+
+        </LinearLayout>
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/opern_lv"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/selector_cir_right_img_bg" />
+            tools:listitem="@layout/item_opern_list" />
+
 
     </LinearLayout>
 
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/opern_lv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/item_opern_list" />
-
-
-</LinearLayout>
+</FrameLayout>
